<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/add_drink"/>    

 	<item
        android:id="@+id/action_favorites"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_star_10"
        android:showAsAction="ifRoom"
        android:title="@string/favorites"/>
    
    <!--item
        android:id="@+id/action_diary"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/diary"/-->
        
    <item
        android:id="@+id/action_chart"
        android:orderInCategory="103"
        android:icon="@drawable/ic_action_line_chart2"
        android:showAsAction="ifRoom"
        android:title="@string/charts"/>
    
    <item
        android:id="@+id/action_history"
        android:orderInCategory="104"
        android:icon="@drawable/ic_action_bargraph2"
        android:showAsAction="ifRoom"
        android:title="@string/diary_graph"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="106"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/config"/>
    
    <item
        android:id="@+id/action_info"
        android:orderInCategory="105"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        android:title="@string/help"/>
    
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="107"
        android:icon="@drawable/ic_star_framed3"
        android:showAsAction="never"
        android:title="@string/rate_app"/>     
        
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="108"
        android:icon="@drawable/ic_mail_framed2"
        android:showAsAction="never"
        android:title="@string/feedback"/>     
    
    <!--item
        android:id="@+id/action_theme"
        android:orderInCategory="109"
        android:icon="@drawable/themes_64"
        android:showAsAction="never"
        android:title="@string/choose_theme"/-->

    <!--item
        android:id="@+id/action_remove_ads"
        android:orderInCategory="110"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom"
        android:title="@string/remove_ads"/-->


</menu>