<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:ads2="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/addTopLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"    
    android:orientation="vertical"    
    >
    
    <!-- com.google.ads.AdView android:id="@+id/new_adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/LinLayout"
         android:layout_marginTop="0dp"	                 
         ads:adUnitId="ca-app-pub-4402674240600002/3912826573"         			   
         ads:adSize="SMART_BANNER"
         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
         ads:loadAdOnCreate="true" 
         android:gravity="center_horizontal" /-->                
    
<ScrollView 
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >    
    
<LinearLayout
    android:id="@+id/scroLay" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
	android:layout_marginRight="0dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"    
    android:orientation="vertical"
    >
    <!-- android:background="@color/light_green"
    android:background="@layout/button" 
     -->
         
   <TextView
        android:id="@+id/tvDrinkName"
        android:layout_width="wrap_content"       
        android:layout_height="@dimen/row_l"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/month"	        	        
        android:textSize="@dimen/text_xl"	        
        android:textStyle="bold" />
         
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"        
        android:orientation="horizontal"
         >            
	    
	    <Button
	        android:id="@+id/bEditName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_l"
	        android:layout_marginLeft="@dimen/margin_xs"
	        android:layout_marginTop="@dimen/margin_xs"	
	        android:padding="@dimen/margin_l"
	        android:layout_gravity="right"
            android:background="@layout/button_click"
	        android:textSize="@dimen/text_s"     
	        android:text="@string/edit_name" />
	    
	    <Button
	        android:id="@+id/bSetDefName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_l"
	        android:layout_marginLeft="@dimen/margin_xs"
	        android:layout_marginTop="@dimen/margin_xs"
	        android:padding="@dimen/margin_l"
	        android:layout_gravity="right"
            android:background="@layout/button_click"
	        android:textSize="@dimen/text_s" 
	        android:text="@string/default_name" />	    
    
    </LinearLayout>  
	    
    <TextView
        android:id="@+id/tvDrinkType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_type"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_l" />

    <Spinner
        android:id="@+id/spinDrinkType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:spinnerMode="dropdown"
        android:background="@layout/button_click"
        android:textSize="@dimen/text_l"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/tvDrinkAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_amount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/text_l" />
    
    <Spinner
        android:id="@+id/spinDrinkAmt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_xxl"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:spinnerMode="dropdown"
        android:background="@layout/button_click"
        android:textSize="@dimen/text_m"
        android:textAppearance="?android:attr/textAppearanceSmall" />    
    
	    <TextView
	        android:id="@+id/tvPercLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginLeft="@dimen/margin_m"
	        android:layout_marginRight="@dimen/margin_m"
	        android:text="@string/percent_alcohol"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="@dimen/text_l" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:orientation="horizontal"
	    >    
        
	    <ImageButton
	        android:id="@+id/btPercMin"
	        android:layout_width="@dimen/row_l"
	        android:layout_height="@dimen/row_l"
	        android:layout_gravity="center_horizontal"
	        android:padding="@dimen/margin_m"
	        android:scaleType="fitCenter"
	        android:src="@drawable/minus_166"
            android:background="@layout/button_click"
	        android:text="-"
	        android:textSize="@dimen/text_xx" />
	    
	    <TextView
	        android:id="@+id/tvPercent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical|center_vertical"
	        android:layout_marginLeft="@dimen/margin_m"
	        android:layout_marginRight="@dimen/margin_m"
	        android:text="Medium Text"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="@dimen/text_l" />

        <ImageButton
            android:id="@+id/btPercPlus"
            android:layout_width="@dimen/row_l"
            android:layout_height="@dimen/row_l"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_m"
            android:scaleType="fitCenter"
            android:src="@drawable/plus_166"
            android:background="@layout/button_click"
            android:text="+"
            android:textSize="@dimen/text_xx" />
        
       	<Button
	        android:id="@+id/bSetDefPerc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_l"
	        android:layout_marginLeft="1dp"
	        android:layout_marginTop="2dp"
	        android:padding="@dimen/margin_l"
	        android:layout_gravity="right"
            android:background="@layout/button_click"
	        android:textSize="@dimen/text_s"      
	        android:text="@string/default_percent" />	

    </LinearLayout>    

    <SeekBar
        android:id="@+id/seekPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:max="104"
        android:progress="30" />

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" />
        
	<TextView
	    android:id="@+id/tvPureAlc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Medium Text"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:visibility="gone"
	    android:textSize="@dimen/text_l" />	 
    
     <TextView
        android:id="@+id/tvConsumpTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical" 
        android:text="@string/consumption_time"
        android:textSize="@dimen/text_l"
        />          
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"             
        android:gravity="center_horizontal"   
        android:orientation="horizontal"
         >       	    
  	
	     <TextView
	        android:id="@+id/tvTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical" 
	        android:text=""
	        android:textSize="@dimen/text_xl"
	        />  
	        
	  	<Button
	        android:id="@+id/bSetTime"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_l"
            android:layout_gravity="right|center_vertical" 
	        android:layout_marginLeft="1dp"
	        android:layout_marginTop="2dp"
            android:background="@layout/button_click"
	        android:padding="@dimen/margin_l"
	        android:textSize="@dimen/text_s"        
	        android:text="@string/change_time" />     
        
     </LinearLayout>
                         
     <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom|center_horizontal"
	    android:layout_marginTop="@dimen/margin_xl"
	    android:gravity="bottom|center_horizontal"	    
	    android:orientation="horizontal"
	    >                 
         
         <Button
            android:id="@+id/btExit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="bottom|center_horizontal"
            android:drawableTop="@drawable/delete_64"
             android:background="@layout/button_click"
            android:textSize="@dimen/text_s"
            android:padding="@dimen/margin_l"
            android:text="@string/exit" />    
            
   	<Button
        android:id="@+id/btAddFavorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"        
        android:layout_weight="1"
        android:layout_gravity="bottom|center_horizontal"
        android:drawableTop="@drawable/star_gold_64"
        android:background="@layout/button_click"
        android:padding="@dimen/margin_l"
        android:text="@string/add_favorite"
        android:textSize="@dimen/text_s" />           
     
         <Button
             android:id="@+id/btAdd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_gravity="bottom|center_horizontal"
             android:drawableTop="@drawable/add_64"
             android:background="@layout/button_click"
             android:padding="@dimen/margin_l"
             android:text="@string/add_drink"
             android:textSize="@dimen/text_s" />                 
         
         </LinearLayout>

	<com.google.android.gms.ads.AdView
		xmlns:ads="http://schemas.android.com/apk/res-auto"
		android:id="@+id/adView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="visible"
		ads:adSize="BANNER"
		ads:adUnitId="ca-app-pub-4402674240600002/3912826573"
		/>

    <!--FrameLayout
        android:id="@+id/native_ad_container_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_gravity="center_horizontal"
		android:visibility="visible"
        android:background="@color/bkg_lt"
        android:orientation="vertical"
        >
    </FrameLayout-->
	<include layout="@layout/ads_incl_fb_banner"/>

	<include layout="@layout/ads_incl_amazon_banner"/>


	<!--com.google.android.gms.ads.NativeExpressAdView
		android:id="@+id/adViewExpress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:layout_gravity="center_horizontal"
		android:visibility="gone"
		ads:adSize="320x100"
		ads:adUnitId="@string/admob_express_small_id">
	</com.google.android.gms.ads.NativeExpressAdView-->

	<!--ads:adSize="280x100"
	LinearLayout
		android:id="@+id/statusBar"
		android:layout_height="25dp"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:visibility="gone"
		android:layout_alignParentBottom="true">
		<TextView
			android:id="@+id/status"
			android:padding="2dp"
			android:textAlignment="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:gravity="left" />
	</LinearLayout-->
     
</LinearLayout>

</ScrollView>

	<!-- com.google.android.gms.ads.AdView
	    xmlns:ads="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/new_adView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    ads:adUnitId="ca-app-pub-4402674240600002/3912826573"
	    ads:adSize="FULL_BANNER"/--> 

</LinearLayout>