<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:gravity="center"
   android:orientation="vertical" >
   
   <DigitalClock
       android:id="@+id/digitalClock"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/text_xl" 
       android:text="DigitalClock"
       android:visibility="gone" />        

   <Chronometer
       android:id="@+id/chronometer"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Chronometer"
       android:visibility="gone" />
   
   <TextView
          android:id="@+id/tvNow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"                
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_m"     
          android:layout_margin="0dp"                        
          android:text="@string/diary_items" />   

   <TextView
          android:id="@+id/tvBAC"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"                
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_m"     
          android:layout_margin="0dp"                        
          android:text="@string/diary_items"
           />

   <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"  	    
	    android:orientation="horizontal" >
	    
	<TextView
          android:id="@+id/circle"
          android:layout_width="@dimen/row_l"
          android:layout_height="@dimen/row_l"                
          android:padding="@dimen/margin_s"   
          android:background="@layout/round_corners"            
          android:layout_margin="0dp"                        
          android:text="" />       
   
	<TextView
          android:id="@+id/tvLastBAC"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"       
          android:layout_gravity="bottom"          
          android:paddingLeft="@dimen/margin_l"   
          android:textSize="@dimen/text_xx"     
          android:layout_margin="0dp"                        
          android:text="@string/diary_items" />
	
		<TextView
          android:id="@+id/tvLastBACrest"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"   
          android:layout_gravity="bottom"             
          android:padding="0dp"   
          android:textSize="@dimen/text_l"     
          android:layout_margin="0dp"                        
          android:text="@string/diary_items" />
		
		<TextView
          android:id="@+id/tvPromile"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"       
          android:layout_gravity="bottom"          
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_xl"     
          android:layout_margin="0dp"                        
          android:text="@string/promile" />		
	
	</LinearLayout>
	
	<TextView
          android:id="@+id/tvSoberHours"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"                
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_l"     
          android:layout_margin="0dp"                        
          android:text="@string/sober_time" />

	<TextView
          android:id="@+id/tvLegalHours"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"                
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_l"     
          android:layout_margin="0dp"                        
          android:text="@string/legal_time" />	

	<TextView
          android:id="@+id/tvSoberTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"                
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_l"     
          android:layout_margin="0dp"                        
          android:text="@string/sober_time"
          android:visibility="gone" />

	<TextView
          android:id="@+id/tvLegalTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"                
          android:padding="@dimen/margin_s"   
          android:textSize="@dimen/text_l"     
          android:layout_margin="0dp"                        
          android:text="@string/legal_time"
          android:visibility="gone" />

</LinearLayout>
